vlib/v/parser/tests/named_sum_type_none_err.out
vlib/v/parser/tests/named_sum_type_none_err.vv:1:34: error: named sum type cannot have none as its variant
    1 | type Abc = string | int | bool | none
      |                                  ~~~~
