vlib/v/parser/tests/named_sum_type_none_err.vv
type Abc = string | int | bool | none
